# OS

CP/: CMakeLists.txt
CP/client/include/: Client.h  GameBoard.h  PipeClient.h
CP/client/src/: client.cpp  client_main.cpp  gameBoard.cpp  pipeClient.cpp
CP/common/: Constants.h  Protocol.h
CP/server/include/: Game.h  Mutex.h  Player.h  Server.h
CP/server/src/: game.cpp  player.cpp  server.cpp  server_main.cpp
Lab_1/: CMakeLists.txt
Lab_1/child/: childProcessor.cpp  child_main.cpp
Lab_1/include/: childProcess.hpp  childProcessor.hpp  pipe.hpp  process.hpp
Lab_1/parent/: childProcess.cpp  main.cpp  pipe.cpp  process.cpp
Lab_1/report/: report.aux  report.out
Lab_1/report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
Lab_1/src/: childProcess.cpp  childProcessor.cpp  child_main.cpp  pipe.cpp  process.cpp
Lab_2/: CMakeLists.txt  benchmark.py  test_input.txt
Lab_2/include/: QuickSort.hpp  Thread.hpp
Lab_2/myenv/: pyvenv.cfg
Lab_2/report/: report.aux  report.out
Lab_2/report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
Lab_2/src/: main.cpp  quicksort.cpp  thread.cpp
Lab_3/: CMakeLists.txt
Lab_3/include/: childProcess.hpp  childProcessor.hpp  process.hpp  sharedMemory.hpp
Lab_3/report/: report.aux  report.out
Lab_3/report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
Lab_3/src/: childProcess.cpp  childProcessor.cpp  child_main.cpp  process.cpp  sharedMemory.cpp
Lab_4/: CMakeLists.txt
Lab_4/include/: AbsDerivative.hpp  AbsSort.hpp  BubbleSort.hpp  Derivative_1.hpp  Derivative_2.hpp  QuickSort.hpp
Lab_4/lib_1/: BubbleSort.cpp  Derivative_1.cpp  fact1.cpp
Lab_4/lib_2/: Derivative_2.cpp  QuickSort.cpp  fact2.cpp
Lab_4/program_1/: main.cpp
Lab_4/program_2/: DynamicLoader.cpp  DynamicLoader.hpp  main.cpp
Lab_4/report/: report.aux  report.out
Lab_4/report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
Lab_5/report/: report.aux  report.out
Lab_5/report/src/: benchmark.tex  literature.tex  problem.tex  thinks.tex  titlepage.tex
